--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,10 @@
 
     <!-- Add Ingredient List Item -->
     <dimen name="list_add_ingredient_keyline">80dp</dimen>
+
+    <!-- Add Direction List Item -->
+    <dimen name="list_add_direction_keyline">80dp</dimen>
+    <dimen name="list_add_direction_button_size">48dp</dimen>
+    <dimen name="list_add_direction_button_top_margin">12dp</dimen>
+    <dimen name="list_add_direction_button_margin">8dp</dimen>
 </resources>
