--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,11 +21,10 @@
 
     <style name="TransparentToolbar" parent="Widget.AppCompat.Light.ActionBar.Solid">
         <item name="android:background">@null</item>
-
         <item name="android:colorPrimary">@color/transparent_white</item>
+        
         <!-- Support library compatibility -->
         <item name="background">@null</item>
-
         <item name="colorPrimary">@color/transparent_white</item>
     </style>
 
@@ -53,6 +52,13 @@
 
     <style name="bodyDarkText">
         <item name="android:textColor">@color/primary_text_black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    
+    <style name="listEditText">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/tertiary_grey_text</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
