Updated CreateRecipeActivity - AddIngredientAdapter currently working - AddDirectionAdapter currently working - Updated UI for the Activity - Added button for removing selected image - Fixed bug where image would keep loading even after it had been changed or removed
TODO: Add save button to save information to database
TODO: Add ability to save multiple recipes-in-work

--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -4,63 +4,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
-        android:id="@+id/content_create_recipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="vertical">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        tools:context="project.hnoct.kitchen.ui.CreateRecipeActivityFragment"
-        tools:showIn="@layout/activity_create_recipe">
+            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
+                android:id="@+id/create_recipe_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="@dimen/list_recipe_thumbnail_height_single"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
+                tools:src="@drawable/placeholder" />
 
-        <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
-            android:id="@+id/create_recipe_image"
+            <ImageView
+                android:id="@+id/create_recipe_clear_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|end|top"
+                android:padding="@dimen/list_add_direction_button_margin"
+                android:src="@drawable/ic_menu_close_clear_cancel"/>
+        </FrameLayout>
+
+
+
+        <LinearLayout
+            android:id="@+id/content_create_recipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="@dimen/list_recipe_thumbnail_height_single"
-            android:scaleType="fitXY"
-            android:adjustViewBounds="true"
-            tools:src="@drawable/placeholder"
-            />
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            tools:context="project.hnoct.kitchen.ui.CreateRecipeActivityFragment"
+            tools:showIn="@layout/activity_create_recipe">
 
-        <EditText
-            android:id="@+id/create_recipe_name_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_text_vertical_padding"
-            android:inputType="textAutoCorrect|textCapWords|textMultiLine"
-            android:maxLines="2"
-            android:hint="@string/create_recipe_name_hint"
-            />
+            <EditText
+                android:id="@+id/create_recipe_name_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_text_vertical_padding"
+                android:inputType="textAutoCorrect|textCapWords|textMultiLine"
+                android:maxLines="2"
+                android:hint="@string/create_recipe_name_hint"
+                />
 
-        <View
-            android:id="@+id/create_recipe_line_separator_top"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/details_line_separator_padding"
-            android:layout_marginRight="@dimen/details_line_separator_padding"
-            android:background="@color/grey_300" />
+            <View
+                android:id="@+id/create_recipe_line_separator_top"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/details_line_separator_padding"
+                android:layout_marginRight="@dimen/details_line_separator_padding"
+                android:background="@color/grey_300" />
 
-        <EditText
-            android:id="@+id/create_recipe_description_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/details_description_text_padding"
-            android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
-            android:hint="@string/create_recipe_description_hint"
-            style="@style/descriptionText"
-            tools:text="An easy, creamy chicken enchilada casserole. Slow cooking gently melds together the flavors of the chicken thigh meat, cream of chicken soup, sour cream, and green chiles"
-            />
+            <EditText
+                android:id="@+id/create_recipe_description_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/details_description_text_padding"
+                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
+                android:hint="@string/create_recipe_description_hint"
+                style="@style/descriptionText"
+                />
 
-        <View
-            android:id="@+id/create_recipe_line_separator_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/details_line_separator_padding"
-            android:layout_marginRight="@dimen/details_line_separator_padding"
-            android:background="@color/grey_300" />
+            <View
+                android:id="@+id/create_recipe_line_separator_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginLeft="@dimen/details_line_separator_padding"
+                android:layout_marginRight="@dimen/details_line_separator_padding"
+                android:background="@color/grey_300" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/create_recipe_ingredient_title_text"
@@ -75,7 +96,9 @@
             android:id="@+id/create_recipe_ingredient_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_text_vertical_padding" />
+            android:layout_marginTop="@dimen/default_text_vertical_padding"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin" />
 
         <TextView
             android:id="@+id/create_recipe_direction_title_text"
@@ -83,6 +106,7 @@
             android:layout_height="wrap_content"
             android:text="@string/list_direction_title"
             android:gravity="center_horizontal"
+
             android:layout_marginTop="@dimen/activity_vertical_margin"
             style="@style/subtitleText" />
 
@@ -91,8 +115,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/default_text_vertical_padding" />
-
+            android:layout_marginTop="@dimen/default_text_vertical_padding"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin" />
     </LinearLayout>
+
 </ScrollView>
 
