--- a/app/src/main/res/layout/list_item_add_ingredient.xml
+++ b/app/src/main/res/layout/list_item_add_ingredient.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="top"
     android:minHeight="@dimen/list_ingredient_min_height">
 
     <ImageView
@@ -12,20 +13,20 @@
         android:layout_height="@dimen/list_add_direction_button_size"
         android:layout_width="@dimen/list_add_direction_button_size"
         android:padding="@dimen/list_add_direction_button_margin"
-        android:src="@drawable/ic_menu_add_custom"
+        android:src="@drawable/ic_menu_close_clear_cancel"
         android:tint="@color/colorPrimaryDark"
-        app:layout_gravity="center"
         />
 
     <EditText
         android:id="@+id/list_add_ingredient_quantity_edit_text"
-        android:layout_width="@dimen/list_add_ingredient_keyline"
+        android:layout_width="@dimen/list_ingredient_keyline"
         android:layout_height="wrap_content"
-        android:inputType="textAutoComplete|textAutoCorrect|textMultiLine"
+        android:minHeight="@dimen/list_add_direction_button_size"
+        android:inputType="textAutoComplete|textAutoCorrect"
         android:hint="@string/list_add_ingredient_quantity_hint"
         android:visibility="gone"
         style="@style/listEditText"
-        app:layout_gravity="center_vertical"
+        android:gravity="center_vertical"
         tools:visibility="visible"/>
 
     <EditText
@@ -33,7 +34,8 @@
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textAutoCorrect|textAutoComplete|textMultiLine"
+        android:minHeight="@dimen/list_add_direction_button_size"
+        android:inputType="textAutoCorrect|textAutoComplete"
         android:hint="@string/list_add_ingredient_name_hint"
         android:visibility="gone"
         style="@style/listEditText"
