--- a/app/src/main/res/layout/list_item_add_ingredient.xml
+++ b/app/src/main/res/layout/list_item_add_ingredient.xml
@@ -29,7 +29,7 @@
         android:gravity="center_vertical"
         tools:visibility="visible"/>
 
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/list_add_ingredient_name_edit_text"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
