CreateRecipeActivity now functional - Modified layout so that fragment is inflated into a container - If all requirements are fulfilled, recipe will be inserted/updated to database when save button is clicked - Added ability to edit other recipes in database
Slight changes in AllRecipesAsyncTask
-  ingredientIds are generated slightly differently
- Moved insertAndUpdateIngredientValues to Utilities

Updated AddDirectionAdapter
- setDirectionList now copies a list instead of referencing the List given as argument

Updated IngredientAdapter
- More robust ability to check whether an ingredient is a header

Updated RecipeDetailsFragment
- Refactored projection and index to RecipeContract.LinkEntry so it can be accessed by other classes

--- a/app/src/main/res/layout/fragment_create_recipe.xml
+++ b/app/src/main/res/layout/fragment_create_recipe.xml
@@ -40,7 +40,7 @@
             android:orientation="vertical"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            tools:context="project.hnoct.kitchen.ui.CreateRecipeActivityFragment"
+            tools:context="project.hnoct.kitchen.ui.CreateRecipeFragment"
             tools:showIn="@layout/activity_create_recipe">
 
             <EditText
