--- a/app/src/main/res/menu/menu_create_recipe.xml
+++ b/app/src/main/res/menu/menu_create_recipe.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="0"
+        android:title="@string/action_save"
+        android:icon="@drawable/ic_menu_save"
+        app:showAsAction="always" />
 </menu>
