Minor fixes and tweaks to CreateRecipeActivity - Fixed bug where source wasn't properly added to edited recipes - Added ability to clear the recipe and start from fresh - Toast now shows which element is missing before adding to database
Minor change to RecipeAdapter
- Now hides views that are not applicable to custom recipes

Added commenting to many functions in multiple classes

--- a/app/src/main/res/menu/menu_create_recipe.xml
+++ b/app/src/main/res/menu/menu_create_recipe.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="project.hnoct.kitchen.ui.CreateRecipeActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_clear_recipe"
+        android:title="@string/action_clear_recipe"
+        android:icon="@drawable/ic_menu_delete"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/action_save"
