FavoritesActivity working - Created SlidingAlphabeticalIndex to allow for fast scrolling through the favorites - Displays all favorite'd recipes in alphabetical order - Clicking on recipes will open the RecipeDetailsActivity using a CallBack (preparation for master-flow view)
Created SlidingAlphabeticalIndex
- Custom View that extends LinearLayout as that was the base for creating the look of the indicator
- Pop-up an indicator that shows what letter the user is currently touching
- Allows for smooth scrolling on the indicator and correctly jumps to the correct letter in the RecyclerView

Updated RecipeAdapter
- Dynamically adds margin on the last card in the list

Updated RecipeListActivity
- Now automatically hides the NavigationDrawer when an item in the Drawer is selected

--- a/app/src/main/res/layout/list_item_recipe.xml
+++ b/app/src/main/res/layout/list_item_recipe.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/list_recipe_vertical_padding"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
     app:contentPaddingBottom="@dimen/card_vertical_padding"
     app:cardCornerRadius="4dp"
     >
