--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/content_favorites"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +10,26 @@
     tools:showIn="@layout/activity_favorites">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorites_recycler_view"
+        android:paddingRight="4dp"
+        android:paddingEnd="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
-    <LinearLayout
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="@dimen/activity_horizontal_margin"
+        app:layout_anchor="@id/favorites_recycler_view"
+        app:layout_anchorGravity="fill"
+        tools:text="Favorite a recipe to see it here!" />
+
+    <project.hnoct.kitchen.view.SlidingAlphabeticalIndex
         android:id="@+id/favorites_index"
-        android:layout_width="24dp"
+        android:layout_width="20dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
@@ -24,6 +38,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-    </LinearLayout>
+    </project.hnoct.kitchen.view.SlidingAlphabeticalIndex>
 
 </RelativeLayout>
