--- a/app/src/main/res/layout/index_spinner.xml
+++ b/app/src/main/res/layout/index_spinner.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/index_spinner_content"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:gravity="center"
-    style="@style/indexAlphabet" />
+    android:layout_height="match_parent">
+
+</RelativeLayout>
