--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -54,4 +54,6 @@
     <dimen name="list_add_direction_button_size">48dp</dimen>
     <dimen name="list_add_direction_button_top_margin">12dp</dimen>
     <dimen name="list_add_direction_button_margin">8dp</dimen>
+
+    <integer name="recipe_columns">1</integer>
 </resources>
