--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -30,6 +30,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
             android:orientation="horizontal">
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
@@ -40,20 +41,47 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_marginTop="?attr/actionBarSize"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 tools:layout="@layout/fragment_main" />
 
-            <FrameLayout
-                android:id="@+id/recipe_detail_container"
+            <RelativeLayout
+                android:id="@+id/detail_fragment_container"
                 android:layout_width="600dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="?attr/actionBarSize"
-                tools:layout="@layout/fragment_recipe_details"/>
+                tools:layout="@layout/fragment_recipe_details">
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/recipe_detail_container"
+                            android:layout_margin="16dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:cardCornerRadius="4dp"
+                            app:contentPaddingBottom="16dp"
+                            tools:layout="@layout/fragment_recipe_details"/>
+                    </LinearLayout>
+
+                </ScrollView>
+
+                <ImageView
+                    android:id="@+id/temp_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:padding="16dp"
+                    android:src="@drawable/ic_menu_close_clear_cancel"/>
+
+            </RelativeLayout>
 
         </LinearLayout>
-
-
 
         <android.support.v7.widget.GridLayout
             android:layout_width="wrap_content"
