--- a/app/src/main/res/layout/list_item_recipe_details.xml
+++ b/app/src/main/res/layout/list_item_recipe_details.xml
@@ -4,12 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_marginTop="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp"
+    android:layout_marginTop="@dimen/card_vertical_separation"
+    android:layout_marginRight="@dimen/card_horizontal_margin"
+    android:layout_marginLeft="@dimen/card_horizontal_margin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="@dimen/card_corner_radius"
     app:contentPaddingBottom="@dimen/card_vertical_padding" >
 
     <FrameLayout
