--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-
     <!-- General use -->
-    <dimen name="default_list_item_vertical_padding">8dp</dimen>
+    <dimen name="default_list_item_vertical_separation">16dp</dimen>
     <dimen name="default_text_vertical_padding">16dp</dimen>
+    <dimen name="text_vertical_padding_small">8dp</dimen>
 
     <!-- Navigation Drawer -->
     <dimen name="navigation_drawer_width">200dp</dimen>
@@ -24,8 +24,7 @@
     <dimen name="list_ingredient_min_height">24dp</dimen>
 
     <!-- Direction list item -->
-    <dimen name="list_direction_keyline">64dp</dimen>
-    <dimen name="list_direction_vertical_padding">@dimen/default_list_item_vertical_padding</dimen>
+    <dimen name="list_direction_keyline">@dimen/list_ingredient_keyline</dimen>
 
     <!-- Recipe Details Activity -->
     <dimen name="details_line_separator_padding">48dp</dimen>
